<resources>
    <string name="app_name">INShareApp</string>
    <string name="title_setting">Setting</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="history">History</string>

    <!--Resources by Kishore Narang-->
    <string name="filter_text">News By Category</string>
    <string name="title">News Title</string>
    <string name="description">News Description will come here. You can describe arround 50 wordss here so that the person infront of you can think what it is.</string>
    <string name="tab_title_one">Apps</string>
    <string name="tab_title_two">Files &amp; Media</string>
    <string name="tab_title_three">Media</string>
    <string name="app_install_fragment">Choose Apps to Transfer</string>
</resources>