<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.tarlochan.inshareapp.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tarlochan.inshareapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_sendFragment"
            app:destination="@id/sendFragment"
           app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tarlochan.inshareapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_news"
        android:name="com.tarlochan.inshareapp.NewsFragment"
        android:label="News"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/navigation_history"
        android:name="com.tarlochan.inshareapp.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/sendFragment"
        android:name="com.kishorenarang.ui.send.SendFragment"
        android:label="send_fragment"
        tools:layout="@layout/send_fragment" />
</navigation>